# Test_DevOps_5

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
jenkins-infra/: Dockerfile  docker-compose.yml
src/: main.cpp
tests/: main.cpp  test_calc.cpp
